Novas linhas traduzidas

--- a/resourcepack/assets/minecraft/lang/jo_OJ.json
+++ b/resourcepack/assets/minecraft/lang/jo_OJ.json
@@ -149,25 +149,25 @@
   "selectWorld.edit.export_worldgen_settings": "Export World Generation Settings",
   "selectWorld.edit.export_worldgen_settings.success": "Exported",
   "selectWorld.edit.export_worldgen_settings.failure": "Export failed",
-  "selectWorld.deleteQuestion": "Are you sure you want to delete this world?",
-  "selectWorld.deleteWarning": "'%s' will be lost forever! (A long time!)",
-  "selectWorld.deleteButton": "Delete",
-  "selectWorld.conversion": "Must be converted!",
-  "selectWorld.conversion.tooltip": "This world must be opened in an older version (like 1.6.4) to be safely converted",
-  "selectWorld.locked": "Locked by another running instance of Minecraft",
-  "selectWorld.incompatible_series": "Created by an incompatible version",
-  "selectWorld.newWorld": "New World",
-  "selectWorld.enterName": "World Name",
-  "selectWorld.resultFolder": "Will be saved in:",
-  "selectWorld.enterSeed": "Seed for the world generator",
-  "selectWorld.seedInfo": "Leave blank for a random seed",
-  "selectWorld.cheats": "Cheats",
-  "selectWorld.customizeType": "Customize",
-  "selectWorld.version": "Version:",
-  "selectWorld.versionUnknown": "unknown",
-  "selectWorld.versionQuestion": "Do you really want to load this world?",
-  "selectWorld.versionWarning": "This world was last played in version %s and loading it in this version could cause corruption!",
-  "selectWorld.versionJoinButton": "Load Anyway",
+  "selectWorld.deleteQuestion": "setem sertesa qui qué distruí??? ;-;",
+  "selectWorld.deleteWarning": "'%s' vai sumi PA SEMPREEEEEEE",
+  "selectWorld.deleteButton": "distruí ;-;",
+  "selectWorld.conversion": "precisa comverte!",
+  "selectWorld.conversion.tooltip": "presisa abrí numa versao amtigasssa",
+  "selectWorld.locked": "NAO pode entra",
+  "selectWorld.incompatible_series": "fizero numa versaum incopativo",
+  "selectWorld.newWorld": "novo mudo",
+  "selectWorld.enterName": "nomi du mudo",
+  "selectWorld.resultFolder": "vai salvá em:",
+  "selectWorld.enterSeed": "sid do mudo",
+  "selectWorld.seedInfo": "dexa asi pra se aleatorio",
+  "selectWorld.cheats": "hax",
+  "selectWorld.customizeType": "customizá",
+  "selectWorld.version": "versaum:",
+  "selectWorld.versionUnknown": "?????? n sei",
+  "selectWorld.versionQuestion": "se reaument qué abri esse mudo?",
+  "selectWorld.versionWarning": " %s CUIDADO PODE DISTRUI!!",
+  "selectWorld.versionJoinButton": "ABRE memo",
   "selectWorld.backupQuestion.snapshot": "Do you really want to load this world?",
   "selectWorld.backupWarning.snapshot": "This world was last played in version %s; you are on version %s. Please make a backup in case you experience world corruptions!",
   "selectWorld.backupQuestion.downgrade": "Downgrading a world is not supported",
@@ -209,16 +209,16 @@
   "createWorld.customize.flat.layer.bottom": "Bottom - %s",
   "createWorld.customize.buffet.title": "Buffet world customization",
   "createWorld.customize.buffet.biome": "Please select a biome",
-  "flat_world_preset.unknown": "???",
+  "flat_world_preset.unknown": "inesistemt",
   "flat_world_preset.minecraft.classic_flat": "Classic Flat",
   "flat_world_preset.minecraft.tunnelers_dream": "Tunnelers' Dream",
   "flat_world_preset.minecraft.water_world": "Water World",
   "flat_world_preset.minecraft.overworld": "Overworld",
   "flat_world_preset.minecraft.snowy_kingdom": "Snowy Kingdom",
   "flat_world_preset.minecraft.bottomless_pit": "Bottomless Pit",
-  "flat_world_preset.minecraft.desert": "Desert",
-  "flat_world_preset.minecraft.redstone_ready": "Redstone Ready",
-  "flat_world_preset.minecraft.the_void": "The Void",
+  "flat_world_preset.minecraft.desert": "umont d areia",
+  "flat_world_preset.minecraft.redstone_ready": "pode usa o bagui vermei",
+  "flat_world_preset.minecraft.the_void": "nada",
   "createWorld.customize.custom.page0": "Basic Settings",
   "createWorld.customize.custom.page1": "Ore Settings",
   "createWorld.customize.custom.page2": "Advanced Settings (Expert Users Only!)",
@@ -281,89 +281,89 @@
   "createWorld.customize.custom.preset.drought": "Drought",
   "createWorld.customize.custom.preset.caveChaos": "Caves of Chaos",
   "createWorld.customize.custom.preset.goodLuck": "Good Luck",
-  "createWorld.preparing": "Preparing for world creation...",
+  "createWorld.preparing": "preparano a criasaum...",
   "datapackFailure.title": "Errors in currently selected datapacks prevented the world from loading.\nYou can either try to load it with only the vanilla data pack (\"safe mode\"), or go back to the title screen and fix it manually.",
   "datapackFailure.safeMode": "Safe Mode",
   "editGamerule.title": "Edit Game Rules",
   "editGamerule.default": "Default: %s",
-  "gameMode.survival": "Survival Mode",
-  "gameMode.creative": "Creative Mode",
-  "gameMode.adventure": "Adventure Mode",
-  "gameMode.spectator": "Spectator Mode",
-  "gameMode.hardcore": "Hardcore Mode!",
-  "gameMode.changed": "Your game mode has been updated to %s",
-  "spectatorMenu.previous_page": "Previous Page",
-  "spectatorMenu.next_page": "Next Page",
-  "spectatorMenu.close": "Close Menu",
-  "spectatorMenu.teleport": "Teleport to Player",
-  "spectatorMenu.teleport.prompt": "Select a player to teleport to",
-  "spectatorMenu.team_teleport": "Teleport to Team Member",
-  "spectatorMenu.team_teleport.prompt": "Select a team to teleport to",
+  "gameMode.survival": "modo vida reau",
+  "gameMode.creative": "MODO DEUS",
+  "gameMode.adventure": "n podê quebrá",
+  "gameMode.spectator": "modo d vista",
+  "gameMode.hardcore": "SO SI VIVE UMA VEIS",
+  "gameMode.changed": "modo d jogá mudo pra %s",
+  "spectatorMenu.previous_page": "voltá",
+  "spectatorMenu.next_page": "próssima",
+  "spectatorMenu.close": "fechá o menu",
+  "spectatorMenu.teleport": "da tp",
+  "spectatorMenu.teleport.prompt": "seleciona um toja pa da tp",
+  "spectatorMenu.team_teleport": "da tp num toja iguao vc",
+  "spectatorMenu.team_teleport.prompt": "seleciona eqipe",
   "spectatorMenu.root.prompt": "Press a key to select a command, and again to use it.",
-  "selectWorld.gameMode": "Game Mode",
-  "selectWorld.gameMode.survival": "Survival",
-  "selectWorld.gameMode.survival.line1": "Search for resources, craft, gain",
-  "selectWorld.gameMode.survival.line2": "levels, health and hunger",
-  "selectWorld.gameMode.creative": "Creative",
-  "selectWorld.gameMode.creative.line1": "Unlimited resources, free flying and",
-  "selectWorld.gameMode.creative.line2": "destroy blocks instantly",
-  "selectWorld.gameMode.spectator": "Spectator",
-  "selectWorld.gameMode.spectator.line1": "You can look but don't touch",
+  "selectWorld.gameMode": "modo d jojo",
+  "selectWorld.gameMode.survival": "sorvaivo",
+  "selectWorld.gameMode.survival.line1": "enguau a vida reau",
+  "selectWorld.gameMode.survival.line2": "",
+  "selectWorld.gameMode.creative": "MODO DEUS",
+  "selectWorld.gameMode.creative.line1": "pode tudo",
+  "selectWorld.gameMode.creative.line2": "",
+  "selectWorld.gameMode.spectator": "modo d vista",
+  "selectWorld.gameMode.spectator.line1": "fais nada",
   "selectWorld.gameMode.spectator.line2": "",
-  "selectWorld.gameMode.hardcore": "Hardcore",
-  "selectWorld.gameMode.hardcore.line1": "Same as Survival Mode, locked at hardest",
-  "selectWorld.gameMode.hardcore.line2": "difficulty, and one life only",
-  "selectWorld.gameMode.adventure": "Adventure",
-  "selectWorld.gameMode.adventure.line1": "Same as Survival Mode, but blocks can't",
-  "selectWorld.gameMode.adventure.line2": "be added or removed",
-  "selectWorld.moreWorldOptions": "More World Options...",
-  "selectWorld.gameRules": "Game Rules",
-  "selectWorld.mapFeatures": "Generate Structures",
-  "selectWorld.mapFeatures.info": "Villages, dungeons etc.",
-  "selectWorld.mapType": "World Type",
-  "selectWorld.mapType.normal": "Normal",
-  "selectWorld.allowCommands": "Allow Cheats",
-  "selectWorld.allowCommands.info": "Commands like /gamemode, /experience",
-  "selectWorld.dataPacks": "Data Packs",
-  "selectWorld.bonusItems": "Bonus Chest",
-  "selectWorld.import_worldgen_settings": "Import Settings",
+  "selectWorld.gameMode.hardcore": "DIFISIO",
+  "selectWorld.gameMode.hardcore.line1": "so si viv uma veis!",
+  "selectWorld.gameMode.hardcore.line2": "",
+  "selectWorld.gameMode.adventure": "aventora",
+  "selectWorld.gameMode.adventure.line1": "fais nada",
+  "selectWorld.gameMode.adventure.line2": "",
+  "selectWorld.moreWorldOptions": "mai opsao.....",
+  "selectWorld.gameRules": "regras",
+  "selectWorld.mapFeatures": "criá strutura",
+  "selectWorld.mapFeatures.info": "vilarojo dângeo etsetra",
+  "selectWorld.mapType": "jeito do mudo",
+  "selectWorld.mapType.normal": "normau",
+  "selectWorld.allowCommands": "ativa hax",
+  "selectWorld.allowCommands.info": "TUDO OS HAX PODE USA",
+  "selectWorld.dataPacks": "mod sem mod",
+  "selectWorld.bonusItems": "BAU ESTRA",
+  "selectWorld.import_worldgen_settings": "importá as coisa",
   "selectWorld.import_worldgen_settings.select_file": "Select settings file (.json)",
   "selectWorld.import_worldgen_settings.failure": "Error importing settings",
   "selectWorld.import_worldgen_settings.experimental.title": "Warning! These settings are using experimental features",
   "selectWorld.import_worldgen_settings.experimental.question": "These settings are experimental and could one day stop working. Do you wish to proceed?",
   "selectWorld.import_worldgen_settings.deprecated.title": "Warning! These settings are using deprecated features",
   "selectWorld.import_worldgen_settings.deprecated.question": "Some features used are deprecated and will stop working in the future. Do you wish to proceed?",
-  "generator.custom": "Custom",
-  "generator.minecraft.normal": "Default",
-  "generator.minecraft.flat": "Superflat",
-  "generator.minecraft.large_biomes": "Large Biomes",
-  "generator.minecraft.amplified": "AMPLIFIED",
-  "generator.minecraft.amplified.info": "Notice: Just for fun! Requires a beefy computer.",
-  "generator.minecraft.debug_all_block_states": "Debug Mode",
+  "generator.custom": "customisá",
+  "generator.minecraft.normal": "normau",
+  "generator.minecraft.flat": "reto",
+  "generator.minecraft.large_biomes": "grandao",
+  "generator.minecraft.amplified": "MAIOR AINDA",
+  "generator.minecraft.amplified.info": "CUIDADO TRAVA TUDO ;-;",
+  "generator.minecraft.debug_all_block_states": "modo secreto",
   "generator.minecraft.single_biome_surface": "Single Biome",
   "generator.customized": "Old Customized",
   "generator.single_biome_caves": "Caves",
   "generator.single_biome_floating_islands": "Floating Islands",
-  "selectServer.title": "Select Server",
-  "selectServer.select": "Join Server",
-  "selectServer.direct": "Direct Connection",
-  "selectServer.edit": "Edit",
-  "selectServer.delete": "Delete",
-  "selectServer.add": "Add Server",
-  "selectServer.defaultName": "Minecraft Server",
-  "selectServer.deleteQuestion": "Are you sure you want to remove this server?",
-  "selectServer.deleteWarning": "'%s' will be lost forever! (A long time!)",
-  "selectServer.deleteButton": "Delete",
-  "selectServer.refresh": "Refresh",
-  "selectServer.hiddenAddress": "(Hidden)",
-  "addServer.title": "Edit Server Info",
-  "addServer.enterName": "Server Name",
-  "addServer.enterIp": "Server Address",
-  "addServer.add": "Done",
-  "addServer.hideAddress": "Hide Address",
-  "addServer.resourcePack": "Server Resource Packs",
-  "addServer.resourcePack.enabled": "Enabled",
-  "addServer.resourcePack.disabled": "Disabled",
+  "selectServer.title": "selesioná",
+  "selectServer.select": "entrá no sv",
+  "selectServer.direct": "entra so uma veis",
+  "selectServer.edit": "mudá",
+  "selectServer.delete": "apagá;-;",
+  "selectServer.add": "botá serve",
+  "selectServer.defaultName": "serve do maine",
+  "selectServer.deleteQuestion": "se tem sertesa qui qué scluí?",
+  "selectServer.deleteWarning": "'%s' vai suMI PRA SEMPRE ;-;",
+  "selectServer.deleteButton": "deletá",
+  "selectServer.refresh": "atoalisar",
+  "selectServer.hiddenAddress": "(scondido)",
+  "addServer.title": "muda imformasao",
+  "addServer.enterName": "nome do servido",
+  "addServer.enterIp": "ip do serve",
+  "addServer.add": "pronto",
+  "addServer.hideAddress": "esconde ip",
+  "addServer.resourcePack": "testura do serve",
+  "addServer.resourcePack.enabled": "deixa",
+  "addServer.resourcePack.disabled": "nao deixa",
   "addServer.resourcePack.prompt": "Prompt",
   "lanServer.title": "LAN World",
   "lanServer.scanning": "Scanning for games on your local network",
