--- a/resourcepack/assets/minecraft/lang/jo_OJ.json
+++ b/resourcepack/assets/minecraft/lang/jo_OJ.json
@@ -283,9 +283,9 @@
   "createWorld.customize.custom.preset.goodLuck": "Good Luck",
   "createWorld.preparing": "preparano a criasaum...",
   "datapackFailure.title": "Errors in currently selected datapacks prevented the world from loading.\nYou can either try to load it with only the vanilla data pack (\"safe mode\"), or go back to the title screen and fix it manually.",
-  "datapackFailure.safeMode": "Safe Mode",
-  "editGamerule.title": "Edit Game Rules",
-  "editGamerule.default": "Default: %s",
+  "datapackFailure.safeMode": "modo toja",
+  "editGamerule.title": "edita as regra",
+  "editGamerule.default": "padr1: %s",
   "gameMode.survival": "modo vida reau",
   "gameMode.creative": "MODO DEUS",
   "gameMode.adventure": "n podê quebrá",
@@ -299,7 +299,7 @@
   "spectatorMenu.teleport.prompt": "seleciona um toja pa da tp",
   "spectatorMenu.team_teleport": "da tp num toja iguao vc",
   "spectatorMenu.team_teleport.prompt": "seleciona eqipe",
-  "spectatorMenu.root.prompt": "Press a key to select a command, and again to use it.",
+  "spectatorMenu.root.prompt": "aperta um butaum pra selesiona 1 comando e dnv pra usá",
   "selectWorld.gameMode": "modo d jojo",
   "selectWorld.gameMode.survival": "sorvaivo",
   "selectWorld.gameMode.survival.line1": "enguau a vida reau",
@@ -327,12 +327,12 @@
   "selectWorld.dataPacks": "mod sem mod",
   "selectWorld.bonusItems": "BAU ESTRA",
   "selectWorld.import_worldgen_settings": "importá as coisa",
-  "selectWorld.import_worldgen_settings.select_file": "Select settings file (.json)",
-  "selectWorld.import_worldgen_settings.failure": "Error importing settings",
-  "selectWorld.import_worldgen_settings.experimental.title": "Warning! These settings are using experimental features",
-  "selectWorld.import_worldgen_settings.experimental.question": "These settings are experimental and could one day stop working. Do you wish to proceed?",
-  "selectWorld.import_worldgen_settings.deprecated.title": "Warning! These settings are using deprecated features",
-  "selectWorld.import_worldgen_settings.deprecated.question": "Some features used are deprecated and will stop working in the future. Do you wish to proceed?",
+  "selectWorld.import_worldgen_settings.select_file": "escolhe arquivo de config (.json)",
+  "selectWorld.import_worldgen_settings.failure": "nao da pra importa ;_;",
+  "selectWorld.import_worldgen_settings.experimental.title": "atensa1! esa config usa coiso esperimentau",
+  "selectWorld.import_worldgen_settings.experimental.question": "esa config e esperimentau vai para de funfa un dia. qué usa memo?",
+  "selectWorld.import_worldgen_settings.deprecated.title": "atensa1! esa config usa coiso discuntinadu",
+  "selectWorld.import_worldgen_settings.deprecated.question": "esa config ta discuntiadu vai para de funfa un dia. qué usa memo?"
   "generator.custom": "customisá",
   "generator.minecraft.normal": "normau",
   "generator.minecraft.flat": "reto",
@@ -364,27 +364,27 @@
   "addServer.resourcePack": "testura do serve",
   "addServer.resourcePack.enabled": "deixa",
   "addServer.resourcePack.disabled": "nao deixa",
-  "addServer.resourcePack.prompt": "Prompt",
-  "lanServer.title": "LAN World",
-  "lanServer.scanning": "Scanning for games on your local network",
-  "lanServer.start": "Start LAN World",
-  "lanServer.otherPlayers": "Settings for Other Players",
-  "multiplayerWarning.header": "Caution: Third-Party Online Play",
-  "multiplayerWarning.message": "Caution: Online play is offered by third-party servers that are not owned, operated, or supervised by Mojang Studios or Microsoft. During online play, you may be exposed to unmoderated chat messages or other types of user-generated content that may not be suitable for everyone.",
-  "multiplayerWarning.check": "Do not show this screen again",
-  "multiplayer.title": "Play Multiplayer",
-  "multiplayer.texturePrompt.line1": "This server recommends the use of a custom resource pack.",
-  "multiplayer.texturePrompt.line2": "Would you like to download and install it automagically?",
-  "multiplayer.requiredTexturePrompt.line1": "This server requires the use of a custom resource pack.",
-  "multiplayer.requiredTexturePrompt.line2": "Rejecting this custom resource pack will disconnect you from this server.",
-  "multiplayer.requiredTexturePrompt.disconnect": "Server requires a custom resource pack",
-  "multiplayer.texturePrompt.failure.line1": "Server resource pack couldn't be applied",
-  "multiplayer.texturePrompt.failure.line2": "Any functionality that requires custom resources might not work as expected",
-  "multiplayer.texturePrompt.serverPrompt": "%s\n\nMessage from server:\n%s",
-  "multiplayer.applyingPack": "Applying resource pack",
-  "multiplayer.downloadingTerrain": "Loading terrain...",
-  "multiplayer.downloadingStats": "Retrieving statistics...",
-  "multiplayer.stopSleeping": "Leave Bed",
+  "addServer.resourcePack.prompt": "prompt",
+  "lanServer.title": "mundo lan",
+  "lanServer.scanning": "veno se tem serve na sua net",
+  "lanServer.start": "iniciano o mundo lan",
+  "lanServer.otherPlayers": "arumano as coisa pros oto",
+  "multiplayerWarning.header": "atensa1: sv de toja",
+  "multiplayerWarning.message": "cuidadu: os toja pode t xinga",
+  "multiplayerWarning.check": "fodasi",
+  "multiplayer.title": "joga juntu",
+  "multiplayer.texturePrompt.line1": "ese serve ten testura",
+  "multiplayer.texturePrompt.line2": "vose q usa?",
+  "multiplayer.requiredTexturePrompt.line1": "vose ten q usa testura nese serve",
+  "multiplayer.requiredTexturePrompt.line2": "se tu n quisé usa n vai pode entra né '-'",
+  "multiplayer.requiredTexturePrompt.disconnect": "ten q usa testura pra entra \ntoja",
+  "multiplayer.texturePrompt.failure.line1": "nao deu pra botá a testura",
+  "multiplayer.texturePrompt.failure.line2": "se fudeo",
+  "multiplayer.texturePrompt.serverPrompt": "%s\n\nmensaj do serve:\n%s",
+  "multiplayer.applyingPack": "botano a testura",
+  "multiplayer.downloadingTerrain": "caregando...",
+  "multiplayer.downloadingStats": "sla qq é iso...",
+  "multiplayer.stopSleeping": "saí da cama",
   "multiplayer.message_not_delivered": "Can't deliver chat message, check server logs: %s",
   "multiplayer.player.joined": "%s joined the game",
   "multiplayer.player.joined.renamed": "%s (formerly known as %s) joined the game",
