--- a/resourcepack/assets/minecraft/lang/jo_OJ.json
+++ b/resourcepack/assets/minecraft/lang/jo_OJ.json
@@ -896,36 +896,36 @@
   "merchant.level.4": "Expert",
   "merchant.level.5": "Master",
   "merchant.trades": "Trades",
-  "block.minecraft.air": "Air",
-  "block.minecraft.barrier": "Barrier",
-  "block.minecraft.light": "Light",
-  "block.minecraft.stone": "Stone",
-  "block.minecraft.granite": "Granite",
-  "block.minecraft.polished_granite": "Polished Granite",
-  "block.minecraft.diorite": "Diorite",
-  "block.minecraft.polished_diorite": "Polished Diorite",
-  "block.minecraft.andesite": "Andesite",
-  "block.minecraft.polished_andesite": "Polished Andesite",
-  "block.minecraft.hay_block": "Hay Bale",
-  "block.minecraft.grass_block": "Grass Block",
-  "block.minecraft.dirt": "Dirt",
-  "block.minecraft.coarse_dirt": "Coarse Dirt",
-  "block.minecraft.podzol": "Podzol",
-  "block.minecraft.cobblestone": "Cobblestone",
-  "block.minecraft.oak_planks": "Oak Planks",
-  "block.minecraft.spruce_planks": "Spruce Planks",
-  "block.minecraft.birch_planks": "Birch Planks",
-  "block.minecraft.jungle_planks": "Jungle Planks",
-  "block.minecraft.acacia_planks": "Acacia Planks",
-  "block.minecraft.dark_oak_planks": "Dark Oak Planks",
-  "block.minecraft.mangrove_planks": "Mangrove Planks",
-  "block.minecraft.oak_sapling": "Oak Sapling",
-  "block.minecraft.spruce_sapling": "Spruce Sapling",
-  "block.minecraft.birch_sapling": "Birch Sapling",
-  "block.minecraft.jungle_sapling": "Jungle Sapling",
-  "block.minecraft.acacia_sapling": "Acacia Sapling",
-  "block.minecraft.dark_oak_sapling": "Dark Oak Sapling",
-  "block.minecraft.mangrove_propagule": "Mangrove Propagule",
+  "block.minecraft.air": "ar",
+  "block.minecraft.barrier": "barera",
+  "block.minecraft.light": "luis",
+  "block.minecraft.stone": "preda",
+  "block.minecraft.granite": "garnito",
+  "block.minecraft.polished_granite": "garnito brilhoso",
+  "block.minecraft.diorite": "djorito",
+  "block.minecraft.polished_diorite": "djorito brilhoso",
+  "block.minecraft.andesite": "desito",
+  "block.minecraft.polished_andesite": "desito brilhoso",
+  "block.minecraft.hay_block": "coisa d vaca",
+  "block.minecraft.grass_block": "verdin",
+  "block.minecraft.dirt": "tera",
+  "block.minecraft.coarse_dirt": "tera coisada",
+  "block.minecraft.podzol": "tera mais coisada",
+  "block.minecraft.cobblestone": "predegui",
+  "block.minecraft.oak_planks": "tabua d carai",
+  "block.minecraft.spruce_planks": "tabua d pinero",
+  "block.minecraft.birch_planks": "tabua d calipso",
+  "block.minecraft.jungle_planks": "tabua d jango",
+  "block.minecraft.acacia_planks": "tabua laronja",
+  "block.minecraft.dark_oak_planks": "tabua scura",
+  "block.minecraft.mangrove_planks": "tabua das manga",
+  "block.minecraft.oak_sapling": "carai piqueno",
+  "block.minecraft.spruce_sapling": "pinero piqueno",
+  "block.minecraft.birch_sapling": "calipso piqueno",
+  "block.minecraft.jungle_sapling": "arv d jango piquena",
+  "block.minecraft.acacia_sapling": "arv laronja piquena",
+  "block.minecraft.dark_oak_sapling": "arv scura piquena",
+  "block.minecraft.mangrove_propagule": "manguinha",
   "block.minecraft.oak_door": "Oak Door",
   "block.minecraft.spruce_door": "Spruce Door",
   "block.minecraft.birch_door": "Birch Door",
